--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div>
-  <app-tetris-container></app-tetris-container>
+  <app-tetris-container class="center"></app-tetris-container>
+  <app-footer class="center"></app-footer>
 </div>
