--- a/src/app/components/tetris-container/components/score-board/tetris-score-board.component.css
+++ b/src/app/components/tetris-container/components/score-board/tetris-score-board.component.css
@@ -3,8 +3,13 @@
   src: url("../../../../../assets/fonts/vp-pixel/VP_Pixel_Simplified-Font_by_VP_Pixel/VPPixel-Simplified.otf");
 }
 
+
 div{
 	background-color: white;
+}
+
+.user-score-board{
+  color: black;
 }
 
 .GameScore{
