--- a/src/app/components/tetris-container/components/score-board/tetris-score-board.component.html
+++ b/src/app/components/tetris-container/components/score-board/tetris-score-board.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div id="UserGameScoreBoard">
+  <div id="UserGameScoreBoard" class="user-score-board">
     <p class="GameScoreText">Game Score:</p>
     <p class="GameScore">{{ getGameScore() }}</p>
   </div>
