--- a/src/app/components/tetris-container/components/next-pattern-board/next-pattern-board.component.css
+++ b/src/app/components/tetris-container/components/next-pattern-board/next-pattern-board.component.css
@@ -1,7 +1,20 @@
-div {
+div#row {
   line-height: 0;
+  display: flex;
+  height: 20%;
 }
 
-app-tetris-block {
-  display: inline-block;
+.no-wrap{
+  white-space: nowrap;
+}
+
+.block {
+  /* display: flex; */
+  width: 100%;
+  height: 100%;
+}
+
+.wh-100{
+  width: 100%;
+  height: 100%;
 }
