--- a/src/app/components/tetris-container/tetris-container.component.css
+++ b/src/app/components/tetris-container/tetris-container.component.css
@@ -1,30 +1,134 @@
-.flex{
+.flex {
 	display: flex;
-	margin: auto;
-	width: max-content;
+	
 }
 
-tr {
-	vertical-align: baseline;
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
-button {
-	--block-size: calc(min(6.3vh, calc(6.25vw - 6.75px)) - 2px);
-	width: calc((var(--block-size) + 2px) * 5);
-	font-size: var(--block-size);
-	margin-top: var(--block-size);
+.container {
+  display: flex;
+  flex-wrap: nowrap;
+	padding: 1vh 1vw 1vh 1vw;
+	font-size: min(2.5vw,3vh);
+
+	touch-action: none;
+	-ms-touch-action: none;
+
+	-moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -o-user-select: none;
 }
 
-.rightTd{
-	--block-size: calc(min(6.3vh, calc(6.25vw - 6.75px)) - 2px);
-	width: 200px;
-	height: calc(var(--block-size) * 16);
-	display: block;
-	overflow: auto;
+.left-container {
+  width: 18vw;
 }
 
-.whiteText {
-	color: white;
-	--block-size: calc(min(6.3vh, calc(6.25vw - 6.75px)) - 2px);
-	font-size: calc(var(--block-size) * 0.35);
+.middle-container {
+  width: min(calc(56vw), calc(80vh / 15 * 9));
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.right-container {
+  width: 18vw;
+}
+
+.next-pattern {
+  display: block;
+  height: 18vw;
+}
+
+button.start {
+  width: calc(100% - 2rem);
+  font-size: 1.5em;
+  margin: 1rem;
+  border-radius: 0.1rem;
+  box-shadow: 0 0 1.2rem -0.3rem yellow;
+}
+
+.block {
+  color: black;
+  position: relative;
+  padding: 0.5vh 0.5vw 0.5vh 0.5vw;
+  cursor: pointer;
+}
+.block img {
+  width: 100%;
+}
+.block-right {
+  margin-left: 10vw;
+}
+.top-centered-text {
+	font-size: 1.0em;
+	white-space: nowrap;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -80%);
+  color: darkslateblue;
+}
+.centered-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.left-controls{
+	-moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -o-user-select: none;
+}
+.bottom-controls {
+  display: none;
+  width: 96%;
+	height: 18vh;
+
+	touch-action: none;
+	-ms-touch-action: none;
+	/* pointer-events: none; */
+	
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -o-user-select: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    flex-wrap: wrap;
+  }
+  .right-container {
+    display: none;
+  }
+  .middle-container {
+    width: min(calc(78vw), calc(65vh / 15 * 9));
+  }
+  button.start {
+    display: block;
+    font-size: 1.1em;
+    margin: auto;
+    margin-top: 1rem;
+    width: calc(100% - 0.2rem);
+    box-shadow: none;
+  }
+  .top-centered-text {
+		/* display: none; */
+		font-size: 0.9em;
+  }
+  .left-controls {
+    display: none;
+  }
+  .bottom-controls {
+    display: block;
+    margin: auto;
+  }
 }
