--- a/src/app/components/tetris-container/components/score-board/tetris-score-board.component.css
+++ b/src/app/components/tetris-container/components/score-board/tetris-score-board.component.css
@@ -4,7 +4,7 @@
 }
 
 
-div{
+.bg-white{
 	background-color: white;
 }
 
@@ -14,15 +14,15 @@ div{
 
 .GameScore{
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: larger;
-  font-weight: 400;
+  font-size: 2em;
+  font-weight: 600;
   text-align: center;
   margin: 0.2em 0 0.5em 0;
 }
 
 .GameScoreText{
   font-family: vp-pixel; /*Arial, Helvetica, sans-serif; Monaco */
-  font-size: larger;
+  font-size: 1.5em;
   font-weight: 400;
   text-align: center;
   margin: 0.2em 0 0.2em 0;
@@ -35,13 +35,14 @@ table.ScoreBoard {
   width: 100%;
   text-align: center;
   border-collapse: collapse;
+  table-layout: fixed;
 }
 table.ScoreBoard td, table.ScoreBoard th {
   border: 1px solid #000000;
   padding: 7px 5px;
 }
 table.ScoreBoard tbody td {
-  font-size: 13px;
+  font-size: 1.5em;
 }
 table.ScoreBoard thead {
   background: #3B3C36;
@@ -51,11 +52,15 @@ table.ScoreBoard thead {
   border-bottom: 1px solid #FFFFFF;
 }
 table.ScoreBoard thead th {
-  font-size: 17px;
+  font-size: 1.3em;
   font-weight: bold;
   color: #D0D0D0;
   text-align: center;
 }
 table.ScoreBoard tfoot td {
   font-size: 14px;
+}
+
+.overflow{
+  overflow: auto;
 }
