--- a/src/app/components/tetris-container/tetris-container.component.css
+++ b/src/app/components/tetris-container/tetris-container.component.css
@@ -43,11 +43,19 @@
   height: 18vw;
 }
 
-button.start {
-  width: calc(100% - 2rem);
+button.btn{
+  width: calc(100% - 1em);
   font-size: 1.5em;
+  padding: 2px;
   margin: 1rem;
-  border-radius: 0.1rem;
+  margin-top: 2em;
+  border-radius: 0.3em;
+  text-align: center;
+  vertical-align: center;
+  border-style: none;
+}
+
+button.start {
   box-shadow: 0 0 1.2rem -0.3rem yellow;
 }
 
@@ -86,10 +94,13 @@ button.start {
   user-select: none;
   -o-user-select: none;
 }
+.left-score{
+  display: none;
+}
 .bottom-controls {
   display: none;
   width: 96%;
-	height: 18vh;
+  height: max-content;
 
 	touch-action: none;
 	-ms-touch-action: none;
@@ -102,26 +113,28 @@ button.start {
   -o-user-select: none;
 }
 
+
 @media only screen and (max-width: 768px) {
   .container {
     flex-wrap: wrap;
+  }
+  .left-container{
+    width: 28vw;
   }
   .right-container {
     display: none;
   }
   .middle-container {
-    width: min(calc(78vw), calc(65vh / 15 * 9));
+    width: min(calc(68vw), calc(70vh / 15 * 9));
   }
-  button.start {
+  button.btn {
     display: block;
-    font-size: 1.1em;
+    font-size: 2em;
     margin: auto;
-    margin-top: 1rem;
+    margin-top: 1em;
     width: calc(100% - 0.2rem);
-    box-shadow: none;
   }
   .top-centered-text {
-		/* display: none; */
 		font-size: 0.9em;
   }
   .left-controls {
@@ -130,5 +143,8 @@ button.start {
   .bottom-controls {
     display: block;
     margin: auto;
+  }
+  .left-score{
+    display: block;
   }
 }
